<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:mId="@+mId/eT_app_pass_crea_pass"
        android:hint="@string/enter_password_hint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:mId="@+mId/eT_app_pass_crea_confirm"
        android:hint="@string/confirm_password_hint"
        android:layout_below="@+mId/eT_app_pass_crea_pass"
        android:layout_alignLeft="@+mId/eT_app_pass_crea_pass"
        android:layout_alignStart="@+mId/eT_app_pass_crea_pass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:mId="@+mId/eT_app_pass_crea_hint"
        android:hint="@string/hint_hint"
        android:layout_centerVertical="true"
        android:layout_below="@+mId/eT_app_pass_crea_confirm"
        android:layout_alignLeft="@+mId/eT_app_pass_crea_confirm"
        android:layout_alignStart="@+mId/eT_app_pass_crea_confirm" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:mId="@+mId/iv_app_pass_crea_check"
        android:src="@drawable/ic_no_match"
        android:layout_alignBottom="@+mId/eT_app_pass_crea_confirm"
        android:layout_toRightOf="@+mId/eT_app_pass_crea_pass"
        android:layout_toEndOf="@+mId/eT_app_pass_crea_pass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_new_account"
        android:mId="@+mId/tv_pass_creat_strength"
        android:layout_above="@+mId/iv_app_pass_crea_check"
        android:layout_toRightOf="@+mId/eT_app_pass_crea_pass"
        android:layout_toEndOf="@+mId/eT_app_pass_crea_pass"
        android:textColor="@color/red"
        />
</RelativeLayout>